Updates recipe images to use blob storage
Refactors image handling to use blob storage for persistence.
This change streamlines image storage and retrieval, leveraging
the blob storage provider for improved efficiency and scalability.

The RecipeImage component is updated to bind directly to BlobContentDto,
allowing for simplified data flow and management. Image resizing
is now handled client-side before upload.

Also fixes an issue where image updates were failing.

--- a/src/Starbender.RecipeApp.Blazor/Components/Button/CreateRecipeButton.razor
+++ b/src/Starbender.RecipeApp.Blazor/Components/Button/CreateRecipeButton.razor
@@ -26,7 +26,7 @@ else
 
 @code {
     [Inject] IDialogService DialogService { get; set; } = default!;
-    [Parameter] public EventCallback<RecipeDto> HandleDialogSavedAsync { get; set; }
+    [Parameter] public EventCallback<FullRecipeDto> HandleDialogSavedAsync { get; set; }
     [Parameter] public bool ShowText { get; set; } = false;
     [Parameter] public string Icon { get; set; } = Icons.Material.Outlined.Add;
 
@@ -40,12 +40,12 @@ else
         try
         {
             _isBusy = true;
-            var selectedRecipe = new RecipeDto();
+            var selectedRecipe = new FullRecipeDto();
 
             var parameters = new DialogParameters<RecipeEditorDialog>
         {
             { x => x.Model, selectedRecipe },
-            // { x => x.OnSaved, EventCallback.Factory.Create<RecipeDto>(this, HandleDialogSavedAsync) }
+            { x => x.OnSaved, EventCallback.Factory.Create<FullRecipeDto>(this, HandleDialogSavedAsync) }
         };
 
             var options = new DialogOptions
