--- a/src/Starbender.RecipeApp.Blazor/Components/RecipeTable.razor
+++ b/src/Starbender.RecipeApp.Blazor/Components/RecipeTable.razor
@@ -1,5 +1,7 @@
+@using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.Extensions.Options
 @using Starbender.RecipeApp.Blazor.Components.Button
+@using Starbender.RecipeApp.Services.Contracts.Authorization
 
 @inherits RecipeComponentBase
 
@@ -8,12 +10,15 @@
         <MudText Typo="Typo.h6">Recipes</MudText>
         <MudStack Row="true" AlignItems="AlignItems.Center" Spacing="1">
             
-            @if (_options.EnableSeeding)
+            @if (_options.EnableSeeding && _canCreateRecipes)
             {
                 <SeedButton />
             }
 
-            <CreateRecipeButton HandleDialogSavedAsync="HandleRecipeCreatedAsync" />
+            @if (_canCreateRecipes)
+            {
+                <CreateRecipeButton HandleDialogSavedAsync="HandleRecipeCreatedAsync" />
+            }
             
             @if(CanCollapse)
             {
@@ -51,6 +56,7 @@
     [Inject] IRecipeAppService RecipeService { get; set; } = default!;
     [Inject] IOptions<RecipeAppOptions> Options { get; set; } = default!;
     [Inject] IDialogService DialogService { get; set; } = default!;
+    [Inject] AuthenticationStateProvider AuthenticationStateProvider { get; set; } = default!;
 
     [Parameter] public bool CanCollapse { get; set; } = false;
     [Parameter] public bool IsEditable { get; set; } = true;
@@ -60,6 +66,7 @@
     private string _searchTerm = string.Empty;
     private RecipeAppOptions _options = new();
     private bool _isExpanded = true;
+    private bool _canCreateRecipes;
 
     private void ToggleExpanded() =>
         _isExpanded = !_isExpanded;
@@ -76,6 +83,8 @@
 
     protected override async Task OnInitializedAsync()
     {
+        var authState = await AuthenticationStateProvider.GetAuthenticationStateAsync();
+        _canCreateRecipes = RecipeAuthorizationEvaluator.HasPermission(authState.User, RecipeAppPermissions.ManageOwnedRecipe);
         _recipes = (await RecipeService.GetAllAsync()).ToList();
         _options = Options.Value;
 
@@ -94,7 +103,14 @@
 
     private async Task HandleRecipeCreatedAsync(RecipeDto newItem)
     {
-        var savedItem = await RecipeService.CreateAsync(newItem);
-        _recipes.Insert(0,savedItem);
+        try
+        {
+            var savedItem = await RecipeService.CreateAsync(newItem);
+            _recipes.Insert(0, savedItem);
+        }
+        catch (Exception ex)
+        {
+            Snackbar.Add($"Create failed: {ex.Message}", Severity.Error);
+        }
     }
 }
