--- a/src/Starbender.RecipeApp/Components/Account/Shared/ManageNavMenu.razor
+++ b/src/Starbender.RecipeApp/Components/Account/Shared/ManageNavMenu.razor
@@ -1,4 +1,4 @@
-﻿@using Microsoft.AspNetCore.Identity
+@using Microsoft.AspNetCore.Identity
 @using Starbender.RecipeApp.EntityFrameworkCore
 
 @inject SignInManager<ApplicationUser> SignInManager
