--- a/src/Starbender.RecipeApp/Components/Account/Shared/StatusMessage.razor
+++ b/src/Starbender.RecipeApp/Components/Account/Shared/StatusMessage.razor
@@ -13,12 +13,17 @@
     public string? Message { get; set; }
 
     [CascadingParameter]
-    private HttpContext HttpContext { get; set; } = default!;
+    private HttpContext? HttpContext { get; set; }
 
     private string? DisplayMessage => Message ?? messageFromCookie;
 
     protected override void OnInitialized()
     {
+        if (HttpContext is null)
+        {
+            return;
+        }
+
         messageFromCookie = HttpContext.Request.Cookies[IdentityRedirectManager.StatusCookieName];
 
         if (messageFromCookie is not null)
